# Qr_overlay

./: README.md  pyproject.toml
n8n_workflows/task_1/: WORKFLOW_DESCRIPTION.md  task_1.json
n8n_workflows/task_2/: QR_WORKFLOW_DESCRIPTION.md  Qr Test.json
src/qr_code_test/: main.py  ngrok.py  qr_generator.py  schemas.py  services.py  state.py
tests/: test_qr.py
